# chappe

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
agents/: README.md
assets/: manifest.json
docs/: brand.md  launch.md  publication.md
examples/: chappe.yaml
scripts/: install.sh
src/chappe/: __init__.py  agents.py  analytics.py  cli.py  config.py  drafts.py  errors.py  gateway.py  imports.py  output.py  paths.py  policy.py  store.py  tdlib.py
src/chappe/agent_assets/claude-code/commands/chappe/: briefing.md  draft.md  publish.md
src/chappe/agent_assets/codex/: AGENTS.snippet.md
src/chappe/agent_assets/codex/chappe/: SKILL.md
src/chappe/agent_assets/hermes/skills/chappe/: SKILL.md  plugin.json
src/chappe/agent_assets/openclaw/skills/chappe/: SKILL.md
src/chappe/agent_assets/opencode/commands/chappe/: briefing.md  ideas.md
tests/: test_analytics.py  test_cli.py  test_config.py  test_drafts_policy.py  test_gateway.py  test_store.py  test_tdlib_normalization.py
